# investigator

./: CMakeLists.txt  README.md  release_plan.txt
investigator.xcodeproj/: project.pbxproj
src/: ArgParser.cpp  ArgParser.hpp  Bookmark.cpp  Bookmark.hpp  BookmarksWindow.cpp  BookmarksWindow.hpp  BookmarksWindowController.cpp  BookmarksWindowController.hpp  Help.hpp  IAppContext.hpp  InputWindow.cpp  InputWindow.hpp  InputWindowController.cpp  InputWindowController.hpp  ListWindow.cpp  ListWindow.hpp  ListWindowBase.hpp  LogLinePrinter.cpp  LogLinePrinter.hpp  LogViewport.cpp  LogViewport.hpp  LogViewportController.cpp  LogViewportController.hpp  LogViewportWindow.cpp  LogViewportWindow.hpp  MainController.cpp  MainController.hpp  Pane.cpp  Pane.hpp  PanesContainer.cpp  PanesContainer.hpp  PanesWindow.cpp  PanesWindow.hpp  PanesWindowController.cpp  PanesWindowController.hpp  ProgressWindow.cpp  ProgressWindow.hpp  QuestionWindow.cpp  QuestionWindow.hpp  QuestionWindowController.cpp  (+4 more)
src/CursesToolkit/: Display.cpp  Display.hpp  ICanvas.hpp  Keyboard.hpp  Window.cpp
src/Logs/: LogBuffer.cpp  LogBuffer.hpp  LogBufferView.cpp  LogBufferView.hpp  MemoryMappedFile.cpp  MemoryMappedFile.hpp
src/Toolkit/: Display.cpp  Display.hpp  ICanvas.hpp  IKeyboardInput.hpp  IWindow.hpp  Keyboard.cpp  Window.cpp  Window.hpp
